--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ api_key = 527447989718462
 api_secret = '6UtlXfbNgPGRKSaPMcPn-s77HgM'
 
 JWT_SECRET=j9j92sj09201jd2nn2djadoisnad92j9j29je9j2j29j
+
+SECRET_KEY = SDFSFSFDTYIFBNI73456HLKYUIO
